kubernetes/apps/security/auth/keto/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keto-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Keto
    gethomepage.dev/description: Permission & Access Control
    gethomepage.dev/group: Security
    gethomepage.dev/icon: ory.png
spec:
  hostnames:
  - "keto.${DOMAIN1}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keto-grpc-read
          port: 80
